# reclamation

./: .gitignore  Cargo.toml  README.md
src/: ai.rs  classify.rs  config.rs  lib.rs  main.rs  quarantine.rs  web.rs
static/: index.html
web/: index.html  package-lock.json
web/src/: main.ts  style.css
